Połączenie do bazy oraz dodanie sesji

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </body>
     
 <script>
+    if(sessionStorage.getItem("loggedIn") !== "true"){
+        window.location.href = "pages/login.html";
+    }
+    else{
+        window.location.href = "pages/main.html";
+    }
+    
     window.addEventListener("resize", function() {
     if( window.outerWidth > window.outerHeight )
             {
