--- a/pages/login.html
+++ b/pages/login.html
@@ -66,7 +66,7 @@
                 // wysłanie zapytania GET i sprawdzenie czy użytkownik istnieje w bazie danych
                 var user = "SELECT * FROM users WHERE username='" + username + "' AND password='" + password + "'";
                 console.log("Zapytanie do bazy danych: " + user);
-                $.get("config.php?user=" + user, function(data) {
+                $.get("login.php?user=" + user, function(data) {
                     console.log("Odpowiedź serwera: " + data);
                     if (data.length == 0) {
                         alert("Błędny login lub hasło");
